Changelog
=========

1.1 (Unreleased)
-------------------

- Add danish translation.
  [tmog]